<resources>
    <string name="app_name">Watad</string>
    <string name="buyer">Buyer</string>
    <string name="seller">Seller</string>
    <string name="admin">Admin</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="password_confirmation">password confirmation</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="don_t_have_an_account">Don\'t have an Account</string>
    <string name="services">Services</string>
    <string name="suppliers">Suppliers</string>
    <string name="books">Books</string>
    <string name="old">Old</string>

    <string name="New">New</string>
    <string name="approved">Approved</string>
    <string name="book_name">Book Name</string>
    <string name="define_location">define Location</string>
    <string name="city">City</string>
    <string name="district">district</string>
    <string name="street_name_number">street name/number</string>
    <string name="building_number">Building Number</string>
    <string name="visa">Visa</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="buying">Buying</string>
</resources>