<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:weightSum="10"
    android:padding="16dp"
    android:background="@color/green_background_color"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_marginBottom="-80dp"
        android:src="@mipmap/ic_logo_foreground"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="28sp"
        android:fontFamily="cursive"
        android:textFontWeight="900"
        android:gravity="center"
        android:textColor="@color/green_main_color"
        android:text="@string/app_name"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buyer"
        android:background="@drawable/button_custom"
        android:id="@+id/btn_Buyer"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seller"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_custom"
        android:id="@+id/btn_Seller"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_custom"
        android:textColor="@color/white"
        android:id="@+id/btn_Admin"/>
</LinearLayout>