<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:weightSum="10"
    tools:context=".BuyerBookPayConfirmationActivity">
<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2">
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rbCashOnDelevry"
        android:text="@string/cash_on_delivery"/>
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rb_visa"
        android:text="@string/visa"/>

</RadioGroup>
    <com.braintreepayments.cardform.view.CardForm
        android:id="@+id/card_form"
        android:layout_width="match_parent"

        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_pay_save"
        android:text="@string/buying"/>
</LinearLayout>