<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".SellerMainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:src="@mipmap/ic_logo_foreground"
        />
<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/books"
    android:gravity="left"
    android:padding="30dp"
    android:textSize="24sp"
    android:id="@+id/btn_seller_books"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suppliers"
        android:padding="30dp"
        android:gravity="left"
        android:textSize="24sp"
        android:id="@+id/btn_seller_Suppliers"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/services"
        android:padding="30dp"
        android:gravity="left"
        android:textSize="24sp"
        android:id="@+id/btn_seller_Services"/>

</LinearLayout>